tests/specs/run/window/window1.out
error: Uncaught (in promise) ReferenceError: window is not defined
"TextEncoder" in window;
                 ^
    at [WILDCARD]window1.js:1:18

    info: window global is not available in Deno 2.
    hint: Replace `window` with `globalThis`.
